fixed level sync problem

--- a/AutoJailMarker/AutoJailMarker.csproj
+++ b/AutoJailMarker/AutoJailMarker.csproj
@@ -1,12 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	
   <PropertyGroup>
     <Authors></Authors>
     <Company></Company>
     <Version>0.0.0.1</Version>
-    <Description>A sample plugin.</Description>
+    <Description>UWU Jail Automarkers</Description>
     <Copyright></Copyright>
-    <PackageProjectUrl>https://github.com/goatcorp/SamplePlugin</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/LockonS483/AutoJailMarker</PackageProjectUrl>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -18,17 +17,10 @@
 	<UseWindowsForms>true</UseWindowsForms>
     <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <OutputPath>$(AppData)\XIVLauncher\devPlugins\SamplePlugin\</OutputPath>
+    <OutputPath>$(AppData)\XIVLauncher\devPlugins\AutoJailMarker\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="..\Data\samplePlugin.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Data\goat.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Visible>false</Visible>
-    </Content>
 	<Content Include="..\Data\Titanos_45.png">
 		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		<Visible>false</Visible>
