--- a/AutoJailMarker/AutoJailMarker.csproj
+++ b/AutoJailMarker/AutoJailMarker.csproj
@@ -33,6 +33,9 @@
 
   <ItemGroup>
     <PackageReference Include="DalamudPackager" Version="2.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Dalamud">
       <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
 	  <Private>false</Private>
